syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

package transactions;

option go_package = "transactions-service;transactions_service";

message FetchByCredentialsRequest {
  string username = 1;
  string password = 2;
  string cardNumber = 3;
  google.protobuf.Timestamp startDate = 4;
  google.protobuf.Timestamp endDate = 5;
}

message FetchFromBytesRequest {
  string cardNumber = 1;
  bytes data = 2;
  google.protobuf.Timestamp startDate = 3;
  google.protobuf.Timestamp endDate = 4;
}

message Transaction {
    string checkInInfo = 1;
    string checkInText = 2;
    google.protobuf.DoubleValue fare = 3;
    string fareCalculation = 4;
    string fareText = 5;
    string modalType = 6;
    string productInfo = 7;
    string productText = 8;
    string pto= 9;
    google.protobuf.Timestamp transactionDateTime = 10;
    string transactionInfo = 11;
    string transactionName = 12;
    google.protobuf.DoubleValue ePurseMut = 13;
    string ePurseMutInfo = 14;
    string transactionExplanation = 15;
    string transactionPriority = 16;

}

message TransactionsResponse {
  repeated Transaction transactions = 1;
}

service TransactionsService {
  rpc FetchByCredentials(FetchByCredentialsRequest) returns (TransactionsResponse) {}
  rpc FetchFromBytes(FetchFromBytesRequest) returns (TransactionsResponse) {}
}